--- a/source/part1.html.erb
+++ b/source/part1.html.erb
@@ -716,7 +716,7 @@ double a = 3.14;
 double b = 22.0;
 double c = a * b * b;
 
-System.out.println();
+System.out.println(c);
 <% end %>
 
 <% partial 'partials/sample_output' do %>
